# webrtc_bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
client/: index.html  serve.py  test_publisher.py
docs/: instructions.txt
include/webrtc_bridge/: data_channel_handler.hpp  signaling_server.hpp  video_encoder.hpp  webrtc_bridge_node.hpp
launch/: webrtc_bridge.launch.py
src/: data_channel_handler.cpp  main.cpp  signaling_server.cpp  video_encoder.cpp  webrtc_bridge_node.cpp
